# YACS

./: .gitignore  Makefile.am  README.md  a.out  autogen.sh  configure.ac  cowsay.c
src/: Makefile-LIBADD.inc  Makefile.am  a.out  cowsay  cowsay-test  cowsay-test.c  cowsay.c  cowsay.h  cowsay.pc.in  cowsay_config  laden  laden-tmp  laden.c  laden.pc.in  laden2  laden2.in  laden_config  libcowsay.pc.in  zelda  zelda.c  zelda.pc.in  zelda_config
